--- a/Scoliosis.ui
+++ b/Scoliosis.ui
@@ -174,6 +174,13 @@
           </property>
          </widget>
         </item>
+        <item row="2" column="1">
+         <widget class="QLabel" name="label_ProbeToGround">
+          <property name="text">
+           <string>-</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
       <item>
