--- a/Scoliosis.ui
+++ b/Scoliosis.ui
@@ -47,17 +47,54 @@
       </item>
       <item>
        <widget class="QLabel" name="label_9">
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>30</height>
+         </size>
+        </property>
         <property name="text">
          <string>Image Quality:</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QLabel" name="quality_bar">
-        <property name="text">
-         <string/>
+       <widget class="QProgressBar" name="imageQuality">
+        <property name="styleSheet">
+         <string notr="true"> QProgressBar {
+     border: 2px solid grey;
+     border-radius: 0px;
+     text-align: center;
+ }
+
+QProgressBar::chunk {
+     background-color: #4add46;
+     width: 1px;
+ }</string>
+        </property>
+        <property name="maximum">
+         <number>100</number>
+        </property>
+        <property name="value">
+         <number>5</number>
+        </property>
+        <property name="textVisible">
+         <bool>false</bool>
         </property>
        </widget>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
       </item>
      </layout>
     </item>
@@ -189,7 +226,7 @@
            <number>10</number>
           </property>
           <property name="value">
-           <number>50</number>
+           <number>80</number>
           </property>
          </widget>
         </item>
@@ -352,6 +389,9 @@
       </item>
       <item>
        <widget class="QPushButton" name="generateIdentifierButton">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
         <property name="font">
          <font>
           <pointsize>20</pointsize>
