--- a/MeasurementExplorer.ui
+++ b/MeasurementExplorer.ui
@@ -271,7 +271,7 @@ QLabel {border: 0px solid black}</string>
           <item row="0" column="1">
            <widget class="QLabel" name="label_8">
             <property name="text">
-             <string>TextLable</string>
+             <string>TextLabel</string>
             </property>
            </widget>
           </item>
@@ -394,7 +394,7 @@ QLabel {border: 0px solid black}</string>
           <item row="0" column="1">
            <widget class="QLabel" name="label_8">
             <property name="text">
-             <string>TextLable</string>
+             <string>TextLabel</string>
             </property>
            </widget>
           </item>
@@ -517,7 +517,7 @@ QLabel {border: 0px solid black}</string>
           <item row="0" column="1">
            <widget class="QLabel" name="label_8">
             <property name="text">
-             <string>TextLable</string>
+             <string>TextLabel</string>
             </property>
            </widget>
           </item>
