--- a/MeasurementExplorer.ui
+++ b/MeasurementExplorer.ui
@@ -72,23 +72,6 @@
           </property>
          </widget>
         </item>
-        <item row="4" column="0">
-         <widget class="QLabel" name="label_Depth">
-          <property name="font">
-           <font>
-            <pointsize>10</pointsize>
-            <weight>50</weight>
-            <bold>false</bold>
-           </font>
-          </property>
-          <property name="text">
-           <string>Depth:</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
-          </property>
-         </widget>
-        </item>
         <item row="2" column="1">
          <widget class="QComboBox" name="dropDown_Frequency">
           <property name="inputMethodHints">
@@ -136,7 +119,50 @@
           </property>
          </widget>
         </item>
+        <item row="4" column="0">
+         <widget class="QLabel" name="label_Depth">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="text">
+           <string>Depth:</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
+         <widget class="QCheckBox" name="checkBox">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0">
+         <widget class="QLabel" name="label_7">
+          <property name="text">
+           <string>Curved Probe</string>
+          </property>
+         </widget>
+        </item>
        </layout>
+      </item>
+      <item>
+       <widget class="QPushButton" name="freezePlayButton">
+        <property name="font">
+         <font>
+          <pointsize>20</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>Freeze</string>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QPushButton" name="recordButton">
@@ -640,8 +666,35 @@ QLabel {border: 0px solid black}</string>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout"/>
       </widget>
+      <widget class="QWidget" name="horizontalLayoutWidget_2">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>900</y>
+         <width>761</width>
+         <height>80</height>
+        </rect>
+       </property>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>Frame of Cine</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QSlider" name="frameSlider">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
       <zorder>horizontalLayoutWidget</zorder>
       <zorder>label_BModeImage</zorder>
+      <zorder>horizontalLayoutWidget_2</zorder>
      </widget>
     </item>
    </layout>
