--- a/MeasurementExplorer.ui
+++ b/MeasurementExplorer.ui
@@ -175,7 +175,19 @@
          </font>
         </property>
         <property name="text">
-         <string>Save Image</string>
+         <string>Save Cine</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton">
+        <property name="font">
+         <font>
+          <pointsize>20</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>Load Cine</string>
         </property>
        </widget>
       </item>
@@ -685,6 +697,12 @@ QLabel {border: 0px solid black}</string>
         </item>
         <item>
          <widget class="QSlider" name="frameSlider">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="value">
+           <number>99</number>
+          </property>
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
